# tgsender6

./: .env.example  .gitignore  .replit  __init__.py  create_comment_tables.py  firstnames.txt  firstnames_female.txt  firstnames_male.txt  lastnames.txt  lastnames_female.txt  lastnames_male.txt  main.py  migrate_comment_tables.py  migrate_db.py  migrate_profile_fields.py  pyproject.toml  recreate_db.py  telegram_sender.db-shm  telegram_sender.db-wal  update_comment_logs_table.py
app/: auth.py  config.py  database.py  proxy_manager.py  sender.py  settings_manager.py  telegram_client.py  views_manager.py  web.py
attached_assets/: Pasted--1-Telegram--1754730452930_1754730452930.txt  Pasted--TData-1-Telethon-TData-Tel-1754828506445_1754828506446.txt  Pasted--Telegram--1754736338058_1754736338058.txt  Pasted--TelegramManager-p-1754761086163_1754761086164.txt  Pasted-ERROR-Exception-Traceback-most-recent-call-last-File-nix-store-yaps09f01jp3fd1405qlr0qz6haf-1754755417679_1754755417679.txt  Pasted-ERROR-Exception-in-ASGI-application-Traceback-most-recent-call-last-File-home-runner-wo-1754813354425_1754813354425.txt  Pasted-ERROR-Exception-in-ASGI-application-Traceback-most-recent-call-last-File-home-runner-wo-1754826120318_1754826120318.txt  Pasted-ERROR-Exception-in-ASGI-application-Traceback-most-recent-call-last-File-home-runner-wo-1754905924160_1754905924161.txt  Pasted-INFO-172-31-64-162-45558-GET-api-stats-HTTP-1-1-200-OK-INFO-172-31-64-162-45558-G-1755176258236_1755176258237.txt  (+2 more)
static/: manifest.json  style.css  sw.js
templates/: accounts.html  admin.html  (+11 more)
