[project]
name = "telegram-sender"
version = "0.1.0"
description = "Telegram messaging application"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "cryptography>=45.0.6",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "pyrogram>=2.0.106",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.42",
    "telethon>=1.40.0",
    "tgcrypto>=1.2.5",
    "uvicorn>=0.35.0",
]

[tool.setuptools]
packages = ["app"]
